<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.auser.yvtc_25.MainActivity">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="71dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:text="@string/at_tv_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView" />

    <TextView
        android:id="@+id/tv_phome"
        android:layout_width="71dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="18dp"
        android:textSize="20dp"
        android:text="@string/at_tv_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="71dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="17dp"
        android:text="@string/at_tv_email"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phome" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/at_et_name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/listView" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/at_et_phome"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/tv_phome"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/at_et_email"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/et_phone" />

    <Button
        android:id="@+id/btn_new"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="19dp"
        android:onClick="onClick"
        android:text="新增"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="19dp"
        android:onClick="onClick"
        android:text="修改"
        app:layout_constraintLeft_toRightOf="@+id/btn_new"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="19dp"
        android:onClick="onClick"
        android:text="刪除"
        app:layout_constraintLeft_toRightOf="@+id/btn_edit"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/sym_action_call"
        app:layout_constraintLeft_toRightOf="@+id/btn_delete"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/sym_action_email"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="354dp"
        android:layout_height="250dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="-1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
